# oxherdcpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  library.h
cmake/: oxherdcpp-config.cmake.in
cmake/modules/: CPM.cmake  tools.cmake
examples/: CMakeLists.txt  minimal_actor.cpp
include/oxherdcpp/actor/: actor.h  actor_context.h  actor_id_generator.h  actor_ref.h  actor_registry.h  actor_state.h  actor_system.h  actor_system_facade.h  events.h  simple_finite_state_machine.h
include/oxherdcpp/actor/message/: message.h  message_dispatcher.h  message_id_generator.h  object_pool.h
include/oxherdcpp/actor/supervision/: supervision_strategy.h
include/oxherdcpp/common/: helper_macros.h  memory.h  types.h  uuid.h
include/oxherdcpp/logger/: boost_logger.h  logger.h
src/: CMakeLists.txt
src/actor/: actor.cpp  actor_context.cpp  actor_ref.cpp  actor_registry.cpp  actor_system.cpp
src/actor/message/: message_dispatcher.cpp  object_pool.cpp
src/actor/supervision/: supervision_strategy.cpp
src/logger/: boost_logger.cpp  logger.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test.cpp
tests/unit/: CMakeLists.txt
tests/unit/actors/: actor_tests.cpp  finite_state_machine_tests.cpp  message_actor_tests.cpp  supervisor_tests.cpp
